feat: Finalização do CRUD completo de agendamento
